Edited wiki page through web user interface.

--- a/wiki/Kuokuo.wiki
+++ b/wiki/Kuokuo.wiki
@@ -8,6 +8,7 @@ Add your content here.
 = Release =
 
 
-= Features =
-|| ID || Feature || Status ||
-| 1 | Test | Not start |
+= Coming Features =
+
+|| *ID* || *Feature* || *Status* ||
+|| 1 || Test || Not start ||
